Fix nav links not scrolling on iOS

--- a/src/components/NavItems.astro
+++ b/src/components/NavItems.astro
@@ -8,25 +8,25 @@ const { class: _class } = Astro.props as Props;
 
 <ul class={_class}>
   <li>
-    <a href="#about">
+    <a href="/#about">
       <i class="fa-solid fa-circle-info" aria-hidden="true"></i>
       About
     </a>
   </li>
   <li>
-    <a href="#meet-the-team">
+    <a href="/#meet-the-team">
       <i class="fa-solid fa-users" aria-hidden="true"></i>
       Meet The Team
     </a>
   </li>
   <li>
-    <a href="#sign-up">
+    <a href="/#sign-up">
       <i class="fa-solid fa-user-plus" aria-hidden="true"></i>
       Sign Up
     </a>
   </li>
   <li>
-    <a href="#credits">
+    <a href="/#credits">
       <i class="fa-solid fa-star" aria-hidden="true"></i>
       Credits
     </a>
