--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -5,18 +5,39 @@ import ContentSection from './Base.astro';
 <ContentSection
   id="hero"
   class="home-hero min-h-screen"
-  title="Advent of Vue"
-  description="24 Vue coding challenges delivered one-per-day via email"
+  title="Rudolph's going down in history early"
+  description="... or in other words, Advent Of Vue 2022 has come to an end prematurely."
 >
   <div
-    class="flex md:flex-row flex-col justify-center md:items-start items-center gap-4"
+    class="flex max-w-[65ch] text-lg leading-8 mx-auto my-0 flex-col justify-center md:items-start items-center gap-5"
   >
-    <a href="#about" class="btn btn-primary font-bold">Learn more</a>
-    <a
-      href="#sign-up"
-      class="btn btn-outline focus:outline-2 focus:outline-primary"
-    >
-      Sign up
-    </a>
+    <p>
+      This is Mac - lead organiser of Advent Of Vue. I regret to inform you that
+      we’ve run out of challenges to email you, due to certain coorganisers
+      failing to submit the rest of their puzzles and to communicate why it was
+      the case.
+    </p>
+    <p>
+      I consider it a lack of trust in me as well as unwillingness to cooperate.
+      Therefore I’ve decided to hand over my responsibilities to
+      <a
+        class="text-primary underline"
+        href="https://twitter.com/MichaelThiessen">Michael Thiessen</a
+      >, since he expressed interest in taking over after I sent out an internal
+      resignation notice on December 11.
+    </p>
+    <p>
+      Although I’d initally wanted to announce my exit on December 25, ie. after
+      releasing the last challenge, the fact that we ran out of them today (ie.
+      on December 18) made for an even better opportunity for me to publicly
+      resign.
+    </p>
+    <p>
+      Lastly, I’d like to thank you all for subscribing to the AOV newsletter!
+      I’m confident Michael will learn from all the shortcomings of this year’s
+      edition and smash it in 2023!
+    </p>
+    <p class="text-center">Merry Xmas and a Happy New Year!</p>
+    <em>Maciej Pędzich (Mac)</em>
   </div>
 </ContentSection>
