--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,7 +58,7 @@ import NavItems from '../components/NavItems.astro';
     ></script>
   </head>
   <body>
-    <header
+    <!-- <header
       class="navbar bg-base-100 fixed top-0 w-full z-50 border-b-[1px] border-gray-600"
     >
       <div class="navbar-start">
@@ -84,14 +84,14 @@ import NavItems from '../components/NavItems.astro';
           />
         </div>
       </div>
-    </header>
+    </header> -->
     <main>
       <slot />
     </main>
-    <footer
+    <!-- <footer
       class="w-full bg-base-100 border-t-[1px] border-gray-600 p-4 text-lg text-center"
     >
       &copy; 2022-present Advent Of Vue Team
-    </footer>
+    </footer> -->
   </body>
 </html>
