--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,8 @@ import Credits from '../components/sections/Credits.astro';
 
 <Layout>
   <Hero />
-  <About />
+  <!-- <About />
   <MeetTheTeam />
   <SignUp />
-  <Credits />
+  <Credits /> -->
 </Layout>
