--- a/src/components/sections/Base.astro
+++ b/src/components/sections/Base.astro
@@ -10,29 +10,29 @@ const { title, description, id, class: _class } = Astro.props as Props;
 ---
 
 <section id={id} class:list={['hero', _class]}>
-  <div class="hero-content flex-col md:flex-row gap-16 my-6">
+  <div class="hero-content flex-col md:flex-row gap-16">
     <div>
-      {
+      <!-- {
         id === 'hero' ? (
-          <h1 class="section-title mt-6 text-5xl text-center font-bold">
+          <div class="section-title mt-6 text-lg text-center font-bold">
             {title}
-          </h1>
+          </div>
         ) : (
-          <h2 class="section-title mt-6 text-5xl text-center font-bold">
+          <div class="section-title mt-6 text-lg text-center font-bold">
             {title}
-          </h2>
+          </div>
         )
-      }
-      {
+      } -->
+      <!-- {
         description && (
-          <p class="section-description text-2xl text-center py-7">
+          <p class="section-description text-base text-center py-7">
             {description}
           </p>
         )
-      }
+      } -->
       <slot />
     </div>
-    {
+    <!-- {
       id === 'hero' && (
         <img
           src="/aov-logo-transparent.png"
@@ -40,6 +40,6 @@ const { title, description, id, class: _class } = Astro.props as Props;
           class="lg:block hidden max-w-sm"
         />
       )
-    }
+    } -->
   </div>
 </section>
